--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "three-globe",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,8 +12,6 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-three/drei": "^9.117.3",
-    "@react-three/fiber": "^8.17.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
@@ -24,17 +22,15 @@
     "react-globe.gl": "^2.27.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.170.0",
-    "three-globe": "^2.35.2",
-    "three-trackballcontrols": "^0.9.0"
+    "three-globe": "^2.35.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/three": "^0.170.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
@@ -43,6 +39,8 @@
     "globals": "^15.11.0",
     "pnpm": "^9.13.2",
     "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
