--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
+    "three-conic-polygon-geometry": "^1.6.5",
+    "three-geojson-geometry": "^1.3.3",
     "three-globe": "^2.35.2"
   },
   "devDependencies": {
