--- a/package.json
+++ b/package.json
@@ -11,49 +11,47 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.5",
 		"@radix-ui/react-label": "^2.1.1",
-		"@radix-ui/react-popover": "^1.1.4",
-		"@radix-ui/react-select": "^2.1.4",
-		"@radix-ui/react-slot": "^1.1.0",
-		"@react-three/drei": "^9.120.6",
+		"@radix-ui/react-popover": "^1.1.5",
+		"@radix-ui/react-select": "^2.1.5",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@react-three/drei": "^9.121.4",
 		"@react-three/fiber": "^8.17.12",
-		"class-variance-authority": "^0.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.18.1",
+		"framer-motion": "^11.18.2",
 		"geojson": "^0.5.0",
 		"lucide-react": "^0.460.0",
 		"react": "^18.3.1",
 		"react-colorful": "^5.6.1",
 		"react-dom": "^18.3.1",
-		"react-globe.gl": "^2.30.0",
-		"tailwind-merge": "^2.5.4",
+		"react-globe.gl": "^2.31.0",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
-		"three": "^0.172.0",
-		"three-globe": "^2.40.1"
+		"three": "^0.172.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.13.0",
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-		"@types/geojson": "^7946.0.14",
-		"@types/node": "^22.9.0",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@biomejs/biome": "1.9.4",
+		"@eslint/js": "^9.19.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@types/geojson": "^7946.0.16",
+		"@types/node": "^22.12.0",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
 		"@types/three": "^0.172.0",
-		"@vitejs/plugin-react": "^4.3.3",
+		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.13.0",
-		"eslint-plugin-react-hooks": "^5.0.0",
-		"eslint-plugin-react-refresh": "^0.4.14",
-		"globals": "^15.11.0",
-		"pnpm": "^9.13.2",
-		"postcss": "^8.4.49",
-		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "^3.4.15",
-		"typescript": "~5.6.2",
-		"typescript-eslint": "^8.11.0",
-		"vite": "^5.4.10"
+		"eslint": "^9.19.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.18",
+		"globals": "^15.14.0",
+		"pnpm": "^9.15.4",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.6.3",
+		"typescript-eslint": "^8.22.0",
+		"vite": "^5.4.14"
 	},
-	"packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
+	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
