update to tailwindcss-v4

--- a/mise.toml
+++ b/mise.toml
@@ -1,16 +1,12 @@
 [tools]
-node = "latest"
+bun = 'latest'
 
-[hooks]
-postinstall = 'npx corepack enable'
-
-[tasks.pnpm-install]
+[tasks.bun-install]
 description = "Install dependencies using pnpm"
-run = "pnpm install"
-sources = ['pnpm-lock.yaml', 'package.json', 'mise.toml']
-outputs = ['node_modules/.pnpm/lock.yaml']
+run = "bun install"
+sources = ['package.json', 'bun.', 'mise.toml']
 
 [tasks.dev]
 description = "Calls your dev script in `package.json`"
-run = ["node --run dev"]
-depends = ["pnpm-install"]
+run = ["bun run dev"]
+depends = ["bun-install"]
