--- a/package.json
+++ b/package.json
@@ -28,30 +28,28 @@
 		"react-dom": "^18.3.1",
 		"react-globe.gl": "^2.31.0",
 		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.172.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.19.0",
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@types/geojson": "^7946.0.16",
 		"@types/node": "^22.12.0",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
 		"@types/three": "^0.172.0",
 		"@vitejs/plugin-react": "^4.3.4",
-		"autoprefixer": "^10.4.20",
 		"eslint": "^9.19.0",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
 		"globals": "^15.14.0",
 		"pnpm": "^9.15.4",
 		"postcss": "^8.5.1",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.0",
 		"typescript": "~5.6.3",
 		"typescript-eslint": "^8.22.0",
-		"vite": "^5.4.14"
-	},
-	"packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
+		"vite": "^5.4.14",
+		"@types/bun": "latest"
+	}
 }
