--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
 		"@radix-ui/react-popover": "^1.1.5",
 		"@radix-ui/react-select": "^2.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.1.3",
 		"@react-three/drei": "^9.121.4",
 		"@react-three/fiber": "^8.17.12",
+		"@types/papaparse": "^5.3.15",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.18.2",
 		"geojson": "^0.5.0",
 		"lucide-react": "^0.460.0",
+		"papaparse": "^5.5.2",
 		"react": "^18.3.1",
 		"react-colorful": "^5.6.1",
 		"react-dom": "^18.3.1",
@@ -34,7 +37,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.19.0",
 		"@tailwindcss/postcss": "^4.0.0",
-		"@types/geojson": "^7946.0.16",
+		"@types/bun": "latest",
 		"@types/node": "^22.12.0",
 		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
@@ -49,7 +52,6 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "~5.6.3",
 		"typescript-eslint": "^8.22.0",
-		"vite": "^5.4.14",
-		"@types/bun": "latest"
+		"vite": "^5.4.14"
 	}
 }
