--- a/package.json
+++ b/package.json
@@ -1,58 +1,62 @@
 {
-	"name": "three-globe",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc -b && vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.5",
-		"@radix-ui/react-label": "^2.1.1",
-		"@radix-ui/react-popover": "^1.1.5",
-		"@radix-ui/react-select": "^2.1.5",
-		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-switch": "^1.1.3",
-		"@react-three/drei": "^9.121.4",
-		"@react-three/fiber": "^8.17.12",
-		"@types/papaparse": "^5.3.15",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"framer-motion": "^11.18.2",
-		"geojson": "^0.5.0",
-		"lucide-react": "^0.460.0",
-		"papaparse": "^5.5.2",
-		"react": "^18.3.1",
-		"react-colorful": "^5.6.1",
-		"react-dom": "^18.3.1",
-		"react-globe.gl": "^2.31.0",
-		"tailwind-merge": "^2.6.0",
-		"three": "^0.172.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@eslint/js": "^9.19.0",
-		"@tailwindcss/postcss": "^4.0.0",
-		"@types/bun": "latest",
-		"@types/node": "^22.12.0",
-		"@types/react": "^18.3.18",
-		"@types/react-dom": "^18.3.5",
-		"@types/three": "^0.172.0",
-		"@vitejs/plugin-react": "^4.3.4",
-		"eslint": "^9.19.0",
-		"eslint-plugin-react-hooks": "^5.1.0",
-		"eslint-plugin-react-refresh": "^0.4.18",
-		"globals": "^15.14.0",
-		"pnpm": "^9.15.4",
-		"postcss": "^8.5.1",
-		"tailwindcss": "^4.0.0",
-		"typescript": "~5.6.3",
-		"typescript-eslint": "^8.22.0",
-		"vite": "^5.4.14"
-	},
-	"packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
+  "name": "three-globe",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
+    "@types/geojson": "^7946.0.16",
+    "@types/papaparse": "^5.3.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
+    "geojson": "^0.5.0",
+    "lucide-react": "^0.460.0",
+    "papaparse": "^5.5.2",
+    "react": "^18.3.1",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.31.0",
+    "tailwind-merge": "^2.6.0",
+    "three": "^0.172.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@eslint/js": "^9.19.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/bun": "latest",
+    "@types/node": "^22.12.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/three": "^0.172.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^5.4.14"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ],
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
