--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
+    "strictNullChecks": true,
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
