feat: implement Rich Text Editor component and remove TinyMCE editor
- Added a new RichTextEditor component using Tiptap for rich text editing capabilities.
- Introduced placeholder support in the editor with custom CSS for empty state.
- Removed the previous TinyMCE editor implementation from the UI.
- Updated form to utilize the new RichTextEditor component for bio input.
- Refactored utility functions in three-utils.ts for improved readability and consistency.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,16 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-router": "^1.117.1",
     "@tanstack/react-router-devtools": "^1.117.1",
-    "@tinymce/tinymce-react": "^6.1.0",
+    "@tiptap/extension-highlight": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-placeholder": "^2.11.7",
+    "@tiptap/extension-subscript": "^2.11.7",
+    "@tiptap/extension-superscript": "^2.11.7",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/geojson": "^7946.0.16",
     "@types/papaparse": "^5.3.15",
     "class-variance-authority": "^0.7.1",
@@ -75,6 +84,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/router-plugin": "^1.117.2",
     "@types/bun": "latest",
     "@types/node": "^22.12.0",
